# financial-agent

./: README.md  app.py  pyproject.toml  requirements.txt
agents/: base_agent.py  crew_setup.py  report_agent.py  research_agent.py  review_agent.py
config/: settings.py
config/prompts/: report_agent.yaml  research_agent.yaml  review_agent.yaml
data/vector_db/deepseek/: chroma.sqlite3
docs/: API_REFERENCES.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  TESTING_STRATEGY.md
evaluation/: __init__.py  metrics.py  monitor.py
knowledge_base/: loader.py  retriever.py  splitter.py
scripts/: deploy_vectordb.py  digikey_scraper.py  generate_docs.py  monitor_agent.py
scripts/utils/: logger.py  wind_connector.py
tools/: digikey_tools.py  report_tools.py  wind_tools.py
