[project]
name = "financial-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "crewai>=0.201.1",
    "fastapi>=0.118.0",
    "langchain-community>=0.3.30",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "matplotlib>=3.10.6",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
]
